thanos-with-tls-setup/thanos/thanos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: thanos-ingress-rule
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: thanos1.nadeemlabs.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thanos-query-frontend
            port:
              number: 9090
